--- a/package.json
+++ b/package.json
@@ -2,8 +2,14 @@
   "name": "food-time",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ertrzyiks.github.io/food-time/",
   "dependencies": {
+    "@material-ui/core": "^4.3.0",
+    "@material-ui/icons": "^4.2.1",
+    "date-fns": "^1.30.1",
+    "gh-pages": "^2.1.0",
     "react": "^16.8.6",
+    "react-animate-mount": "^1.0.1",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
   },
