--- a/package.json
+++ b/package.json
@@ -4,18 +4,23 @@
   "private": true,
   "homepage": "https://ertrzyiks.github.io/food-time/",
   "dependencies": {
+    "@apollo/react-hooks": "^0.1.0-beta.11",
     "@material-ui/core": "^4.3.0",
     "@material-ui/icons": "^4.2.1",
+    "apollo-boost": "^0.4.3",
     "date-fns": "^1.30.1",
     "gh-pages": "2.0.1",
+    "graphql": "^14.4.2",
+    "graphql-tag": "^2.10.1",
     "react": "^16.8.6",
     "react-animate-mount": "^1.0.1",
+    "react-apollo": "^2.5.8",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "REACT_APP_GRAPHQL_ENDPOINT=http://papi.ertrzyiks.me/food-time react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "yarn run build",
