--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "homepage": "https://ertrzyiks.github.io/food-time/",
   "dependencies": {
-    "@apollo/react-hooks": "^0.1.0-beta.11",
     "@material-ui/core": "^4.3.0",
     "@material-ui/icons": "^4.2.1",
-    "apollo-boost": "^0.4.3",
+    "apollo-cache-inmemory": "^1.6.2",
+    "apollo-client": "^2.6.3",
+    "apollo-link-http": "^1.5.15",
     "date-fns": "^1.30.1",
     "gh-pages": "2.0.1",
     "graphql": "^14.4.2",
@@ -15,7 +16,9 @@
     "react": "^16.8.6",
     "react-animate-mount": "^1.0.1",
     "react-apollo": "^2.5.8",
+    "react-apollo-hooks": "^0.5.0",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
   },
   "scripts": {
