--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "homepage": "https://ertrzyiks.github.io/food-time/",
   "dependencies": {
+    "@date-io/date-fns": "^1.3.9",
     "@material-ui/core": "^4.3.0",
     "@material-ui/icons": "^4.2.1",
+    "@material-ui/pickers": "^3.2.2",
     "apollo-cache-inmemory": "^1.6.2",
     "apollo-client": "^2.6.3",
     "apollo-link-http": "^1.5.15",
-    "date-fns": "^1.30.1",
+    "date-fns": "^2.0.0-beta.3",
     "gh-pages": "2.0.1",
     "graphql": "^14.4.2",
     "graphql-tag": "^2.10.1",
