--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "graphql": "^14.4.2",
     "graphql-tag": "^2.10.1",
     "react": "^16.8.6",
-    "react-animate-mount": "^1.0.1",
     "react-apollo": "^2.5.8",
     "react-apollo-hooks": "^0.5.0",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-transition-group": "1.x"
   },
   "scripts": {
     "start": "react-scripts start",
