--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/icons": "^4.2.1",
     "apollo-cache-inmemory": "^1.6.2",
     "apollo-client": "^2.6.3",
+    "apollo-link-context": "^1.0.18",
     "apollo-link-http": "^1.5.15",
     "date-fns": "^2.0.0-beta.3",
     "gh-pages": "2.0.1",
@@ -17,6 +18,7 @@
     "react-apollo": "^2.5.8",
     "react-apollo-hooks": "^0.5.0",
     "react-dom": "^16.8.6",
+    "react-google-login": "^5.0.5",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-transition-group": "1.x"
