--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@material-ui/icons": "^4.2.1",
     "apollo-cache-inmemory": "^1.6.2",
     "apollo-client": "^2.6.3",
-    "apollo-link-context": "^1.0.18",
+    "apollo-link": "^1.2.12",
     "apollo-link-http": "^1.5.15",
     "date-fns": "^2.0.0-beta.3",
     "gh-pages": "2.0.1",
