--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://ertrzyiks.github.io/food-time/",
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.2",
     "@material-ui/core": "^4.3.0",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/lab": "^4.0.0-alpha.25",
@@ -11,13 +12,14 @@
     "apollo-client": "^2.6.3",
     "apollo-link": "^1.2.12",
     "apollo-link-http": "^1.5.15",
+    "chartist": "^0.11.4",
     "date-fns": "^2.0.0-beta.3",
     "gh-pages": "2.0.1",
     "graphql": "^14.4.2",
     "graphql-tag": "^2.10.1",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-apollo": "^2.5.8",
-    "react-apollo-hooks": "^0.5.0",
     "react-dom": "^16.8.6",
     "react-google-login": "^5.0.5",
     "react-router-dom": "^5.0.1",
